--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "furniturestore",
   "version": "0.1.0",
-  "homepage": "https://moeeza3.github.io/Light-Furniture-Store/#",
+  "homepage": "https://moeeza3.github.io/Light-Furniture-Store/home",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
@@ -27,11 +27,9 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
